# ghosts

./: README.md  default.nix  ghosts.cabal  hie.yaml
app/: Main.hs
src/: Ghosts.hs  Named.hs  User.hs
src/Database/: User.hs
src/Proofs/: Admin.hs  Authenticated.hs
test/: Main.hs
