name:                ghosts
synopsis:            Project synopsis
version:             0.0.1.0
homepage:            https://github.com/jhuizy/ghosts
license:             BSD3
author:              Jordan Huizenga
maintainer:          Jordan Huizenga
copyright:           Jordan Huizenga
category:            Package.Category
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Ghosts
  ghc-options:         -Wall -fno-warn-name-shadowing
  build-depends:       base
                     , scotty

executable ghosts
  main-is:            Main.hs
  hs-source-dirs:     app
  default-language:   Haskell2010
  ghc-options:        -threaded -O2
  build-depends:      base
                    , ghosts

test-suite ghosts-tests
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  default-language: Haskell2010
  ghc-options:      -Wall -threaded
  build-depends:    base
                  , ghosts
                  , hedgehog
